<resources>
    <string name="app_name">Desafio-Eyetec</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desafio_eyetec">Desafio Eyetec</string>
    <string name="new_user">Novo Usuário</string>
    <string name="all_users">Todos usuários</string>
    <string name="full_name">Nome completo</string>
    <string name="age">Idade</string>
    <string name="email">Email</string>
    <string name="active">Ativo</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Salvar</string>
    <string name="update">Atualizar</string>
    <string name="edit_user">Editar Usuário</string>
    <string name="invalid_name">Nome inválido</string>
    <string name="invalid_age">Idade inválida</string>
    <string name="invalid_email">Email inválido</string>
    <string name="insert_user_name">Insira o nome do usuário</string>
    <string name="edit">Editar</string>
    <string name="delete">Deletar</string>
    <string name="search_user">Buscar usuário...</string>
    <string name="confirm_deletion">Confirmar deleção</string>
    <string name="are_you_sure_delete_user">Tem certeza que deseja deletar este usuário?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="user_saved_success">Usuário salvo com sucesso!</string>
    <string name="user_updated_success">Usuário atualizado com sucesso!</string>
    <string name="take_photo">Tirar Foto</string>
    <string name="capture">Capturar</string>
    <string name="position_face_center">Posicione seu rosto no centro</string>
    <string name="face_detected">Rosto detectado!</string>
    <string name="user_photo">Foto do usuário</string>
    <string name="permission_denied">Permissão de câmera negada</string>
    <string name="capture_photo">Capturar Foto</string>
    <string name="delete_photo">Deletar Foto</string>
    <string name="face_too_far">Aproxime o rosto da câmera</string>
    <string name="face_too_close">Afaste o rosto da câmera</string>
    <string name="face_not_centered">Centralize o rosto no círculo</string>
</resources>